--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<div class="flex flex-wrap">
 				<div class="w-full self-center px-4 lg:w-1/2">
 					<h1 class="text-base font-semibold text-violet-700 md:text-xl">أهلا وسهلا<span class="block font-bold text-slate-900 text-3xl mt-1 lg:text-4xl">Pandu Putra Pradana</span></h1>
-					<h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl">Programmer | <span class="text-slate-900">Developer</span></h2>
+					<h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl">Programmer | <span class="text-slate-900">Freelancer</span></h2>
 					<p class="font-medium text-slate-400 mb-10 leading-relaxed">Pengalaman kerja tercipta saat kita sudah <span class="font-semibold text-slate-900">Bekerja!</span></p>
 
 					<a href="#about" class="text-base font-semibold text-white bg-violet-700 py-3 px-8 rounded-full hover:shadow-lg hover:opacity-70 transition duration-500 ease-in-out">Hubungi Saya</a>
