--- a/index.html
+++ b/index.html
@@ -300,64 +300,64 @@
               <img src="dist/img/project1.png" alt="Project 1" width="w-full" />
             </div>
             <h3 class="font-semibold text-slate-900 text-xl mt-5 mb-3">
-              Aplikasi Inventory Barang berbasis web
+              Aplikasi Inventory Barang (PT Almega Sejahtera)
             </h3>
-            <p class="font-medium text-base text-slate-400">
+<!--             <p class="font-medium text-base text-slate-400">
               Aplikasi tersebut merupakan aplikasi inventory barang dari
               perusahaan "PT. Almega Sejahtera". Dibuat dengan framework
               codeigniter 3, aplikasi tersebut memiliki fitur yang lumayan
               banyak.
-            </p>
+            </p> -->
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img src="dist/img/project6.png" alt="Project 6" width="w-full" />
             </div>
             <h3 class="font-semibold text-slate-900 text-xl mt-5 mb-3">
-              Website Landing Page (Fullstack)
+              Website Landing Page (Kitabuatkan.id)
             </h3>
-            <p class="font-medium text-base text-slate-400">
+<!--             <p class="font-medium text-base text-slate-400">
               Website tersebut merupakan landing page dari startup bernama "Kita
               Buatkan". Dibangun dengan Codeigniter 3 & TailwindCSS
-            </p>
+            </p> -->
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img src="dist/img/project3.png" alt="Project 3" width="w-full" />
             </div>
             <h3 class="font-semibold text-slate-900 text-xl mt-5 mb-3">
-              Website Berita
+              Website Berita (Indofakta.com)
             </h3>
-            <p class="font-medium text-base text-slate-400">
+<!--             <p class="font-medium text-base text-slate-400">
               Website tersebut merupakan website berita dari media berita online
               bernama "Indo Fakta". Dibuat dengan framework css "Tailwindcss".
-            </p>
+            </p> -->
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img src="dist/img/project5.png" alt="Project 5" width="w-full" />
             </div>
             <h3 class="font-semibold text-slate-900 text-xl mt-5 mb-3">
-              Undangan Digital
+              Undangan Digital (Pandu Memories/Pramuka SMKN 7 Baleendah)
             </h3>
-            <p class="font-medium text-base text-slate-400">
+<!--             <p class="font-medium text-base text-slate-400">
               Website tersebut merupakan sebuah undangan digital dari suatu
               acara bernama "Pandu Memories 1". Dibuat dengan framework css
               "Tailwindcss".
-            </p>
+            </p> -->
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img src="dist/img/project2.png" alt="Project 2" width="w-full" />
             </div>
             <h3 class="font-semibold text-slate-900 text-xl mt-5 mb-3">
-              Aplikasi Data Transaksi berbasis web
+              Aplikasi Data Transaksi berbasis web (PT Asia Dream Mart)
             </h3>
-            <p class="font-medium text-base text-slate-400">
+<!--             <p class="font-medium text-base text-slate-400">
               Aplikasi tersebut merupakan aplikasi data transaksi dari
               perusahaan "Asia Dream Mart". Dibuat dengan framework codeigniter
               3.
-            </p>
+            </p> -->
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
