--- a/index.html
+++ b/index.html
@@ -297,6 +297,20 @@
         >
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
+              <img src="dist/img/ksm.png" alt="Project 1" width="w-full" />
+            </div>
+            <h3 class="font-semibold text-slate-900 text-xl mt-5 mb-3">
+              Website Landing Page (PT Kreasi Sarana Mandiri)
+            </h3>
+<!--             <p class="font-medium text-base text-slate-400">
+              Aplikasi tersebut merupakan aplikasi inventory barang dari
+              perusahaan "PT. Almega Sejahtera". Dibuat dengan framework
+              codeigniter 3, aplikasi tersebut memiliki fitur yang lumayan
+              banyak.
+            </p> -->
+          </div>
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden">
               <img src="dist/img/project1.png" alt="Project 1" width="w-full" />
             </div>
             <h3 class="font-semibold text-slate-900 text-xl mt-5 mb-3">
@@ -311,14 +325,15 @@
           </div>
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
-              <img src="dist/img/project6.png" alt="Project 6" width="w-full" />
+              <img src="dist/img/project2.png" alt="Project 2" width="w-full" />
             </div>
             <h3 class="font-semibold text-slate-900 text-xl mt-5 mb-3">
-              Website Landing Page (Kitabuatkan.id)
+              Aplikasi Data Transaksi (PT Asia Dream Mart)
             </h3>
 <!--             <p class="font-medium text-base text-slate-400">
-              Website tersebut merupakan landing page dari startup bernama "Kita
-              Buatkan". Dibangun dengan Codeigniter 3 & TailwindCSS
+              Aplikasi tersebut merupakan aplikasi data transaksi dari
+              perusahaan "Asia Dream Mart". Dibuat dengan framework codeigniter
+              3.
             </p> -->
           </div>
           <div class="mb-12 p-4 md:w-1/2">
@@ -346,17 +361,17 @@
               "Tailwindcss".
             </p> -->
           </div>
+          
           <div class="mb-12 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
-              <img src="dist/img/project2.png" alt="Project 2" width="w-full" />
+              <img src="dist/img/project6.png" alt="Project 6" width="w-full" />
             </div>
             <h3 class="font-semibold text-slate-900 text-xl mt-5 mb-3">
-              Aplikasi Data Transaksi berbasis web (PT Asia Dream Mart)
+              Website Landing Page (Kitabuatkan.id)
             </h3>
 <!--             <p class="font-medium text-base text-slate-400">
-              Aplikasi tersebut merupakan aplikasi data transaksi dari
-              perusahaan "Asia Dream Mart". Dibuat dengan framework codeigniter
-              3.
+              Website tersebut merupakan landing page dari startup bernama "Kita
+              Buatkan". Dibangun dengan Codeigniter 3 & TailwindCSS
             </p> -->
           </div>
           <div class="mb-12 p-4 md:w-1/2">
@@ -366,11 +381,11 @@
             <h3 class="font-semibold text-slate-900 text-xl mt-5 mb-3">
               Aplikasi Laundry berbasi web
             </h3>
-            <p class="font-medium text-base text-slate-400">
+<!--             <p class="font-medium text-base text-slate-400">
               Aplikasi tersebut merupakan salah satu tugas saya pada saat masih
               menjadi siswa di SMKN 7 Baleendah. Dibuat dengan framework
               codeigniter 3, aplikasi tersebut memiliki fitur yang cukup banyak.
-            </p>
+            </p> -->
           </div>
         </div>
       </div>
